--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,27 +1,36 @@
-version: 0.2
-
-phases:
-  pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 253490770873.dkr.ecr.us-east-2.amazonaws.com
-      - echo Getting the code version...
-      - export CODE_VERSION=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-  build:
-    commands:
-      - echo Building the Docker image...
-      - docker build -t nr-registry-test:${CODE_VERSION} .
-      - docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}
-      - docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest
-  post_build:
-    commands:
-      - echo Pushing the Docker image to ECR...
-      - docker push 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}
-      - docker push 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest
-      - echo Writing image definition file for ECS deployment...
-      - printf '[{"name":"nr-registry-test","imageUri":"%s"}]' 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION} > imagedefinitions.json
-
-artifacts:
-  files:
-    - imagedefinitions.json
+{
+  "version": "0.2",
+  "phases": {
+    "pre_build": {
+      "commands": [
+        "echo Logging in to Amazon ECR...",
+        "aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 253490770873.dkr.ecr.us-east-2.amazonaws.com",
+        "echo Getting the code version...",
+        "export CODE_VERSION=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
+      ]
+    },
+    "build": {
+      "commands": [
+        "echo Building the Docker image...",
+        "docker build -t nr-registry-test:${CODE_VERSION} -f docker/Dockerfile ./docker",
+        "docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}",
+        "docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest"
+      ]
+    },
+    "post_build": {
+      "commands": [
+        "echo Pushing the Docker image to ECR...",
+        "docker push 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}",
+        "docker push 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest",
+        "echo Writing image definition file for ECS deployment...",
+        "printf '[{\"name\":\"nr-registry-test\",\"imageUri\":\"%s\"}]' 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION} > imagedefinitions.json"
+      ]
+    }
+  },
+  "artifacts": {
+    "files": [
+      "imagedefinitions.json"
+    ]
+  }
+}
 
