--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,17 +4,22 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 253490770873.dkr.ecr.us-east-2.amazonaws.com
+      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
       - echo Getting the code version...
       - export CODE_VERSION=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
-      - echo Using existing image from ECR...
-      - echo No need to build a new image.
+      - echo Building the Docker image...
+      - docker build -t $ECR_REPOSITORY:${CODE_VERSION} .
+      - docker tag $ECR_REPOSITORY:${CODE_VERSION} $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION}
+      - docker tag $ECR_REPOSITORY:${CODE_VERSION} $ECR_REGISTRY/$ECR_REPOSITORY:latest
   post_build:
     commands:
+      - echo Pushing the Docker image to ECR...
+      - docker push $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION}
+      - docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - echo Writing image definition file for ECS deployment...
-      - printf '[{"name":"php-container-nc","imageUri":"%s"}]' 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest > imagedefinitions.json
+      - printf '[{"name":"php-container-nc","imageUri":"%s"}]' $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION} > imagedefinitions.json
 
 artifacts:
   files:
