--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
       - echo Getting the code version...
       - export CODE_VERSION=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - echo CODE_VERSION is $CODE_VERSION  # Comando de depuración para mostrar el valor de CODE_VERSION
   build:
     commands:
       - echo Building the Docker image...
@@ -24,3 +25,4 @@ phases:
 artifacts:
   files:
     - imagedefinitions.json
+
