--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,25 +4,23 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
+      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 253490770873.dkr.ecr.us-east-2.amazonaws.com
       - echo Getting the code version...
       - export CODE_VERSION=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - echo CODE_VERSION is $CODE_VERSION
-      - echo ECR_REGISTRY is $ECR_REGISTRY  # Comando de depuración para mostrar el valor de ECR_REGISTRY
-      - echo ECR_REPOSITORY is $ECR_REPOSITORY  # Comando de depuración para mostrar el valor de ECR_REPOSITORY
+    
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t $ECR_REPOSITORY:${CODE_VERSION} .
-      - docker tag $ECR_REPOSITORY:${CODE_VERSION} $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION}
-      - docker tag $ECR_REPOSITORY:${CODE_VERSION} $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      - docker build -t nr-registry-test:${CODE_VERSION} .
+      - docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}
+      - docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest
   post_build:
     commands:
       - echo Pushing the Docker image to ECR...
-      - docker push $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION}
-      - docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      - docker push 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}
+      - docker push 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest
       - echo Writing image definition file for ECS deployment...
-      - printf '[{"name":"php-container-nc","imageUri":"%s"}]' $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION} > imagedefinitions.json
+      - printf '[{"name":"php-container-nc","imageUri":"%s"}]' 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION} > imagedefinitions.json
 
 artifacts:
   files:
