--- a/TICKET-123/Pipeline/buildspec.yml
+++ b/TICKET-123/Pipeline/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t nr-registry-test:${CODE_VERSION} ./TICKET-123
+      - docker build -t nr-registry-test:${CODE_VERSION} -f ./TICKET-123/Docker/Dockerfile ./TICKET-123
       - docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:${CODE_VERSION}
       - docker tag nr-registry-test:${CODE_VERSION} 253490770873.dkr.ecr.us-east-2.amazonaws.com/nr-registry-test:latest
   post_build:
@@ -25,4 +25,3 @@ phases:
 artifacts:
   files:
     - imagedefinitions.json
-
