--- a/TICKET-123/Pipeline/buildspec.yml
+++ b/TICKET-123/Pipeline/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 env:
   variables:
-    ECR_REGISTRY: "253490770873.dkr.ecr.us-east-2.amazonaws.com"  # Usa la variable de entorno
-    ECR_REPOSITORY: "nr-registry-test"  # Usa la variable de entorno
+    ECR_REGISTRY: "253490770873.dkr.ecr.us-east-2.amazonaws.com"
+    ECR_REPOSITORY: "nr-registry-test"
 
 phases:
   pre_build:
@@ -12,21 +12,21 @@ phases:
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
       - echo Getting the code version...
       - export CODE_VERSION=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-   
+
   build:
     commands:
       - echo Building the Docker image...
       - docker build -t $ECR_REPOSITORY:${CODE_VERSION} -f ./TICKET-123/Docker/Dockerfile ./TICKET-123
       - docker tag $ECR_REPOSITORY:${CODE_VERSION} $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION}
-      
 
   post_build:
     commands:
       - echo Pushing the Docker image to ECR...
       - docker push $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION}
       - echo Writing image definition file for ECS deployment...
-      - printf '[{"name":"php-container-nc","imageUri":"%s"}]' $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION} > imagedefinitions.json
+      - printf '[{"name":"php-container-nc","imageUri":"%s"}]' $ECR_REGISTRY/$ECR_REPOSITORY:${CODE_VERSION} > cloned-imagedefinitions.json
 
 artifacts:
   files:
-    - imagedefinitions.json
+    - cloned-imagedefinitions.json
+
